--- a/crgw-ui/public/index.html
+++ b/crgw-ui/public/index.html
@@ -24,7 +24,9 @@
     <title>React App</title>
   </head>
   <style>
-    body { overflow: hidden; }
+    body {
+      overflow: hidden;
+    }
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
