--- a/crgw-ui/public/index.html
+++ b/crgw-ui/public/index.html
@@ -27,6 +27,12 @@
     body {
       overflow: hidden;
     }
+
+    @media (hover: none) {
+      body {
+        overflow: unset;
+      }
+    }
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
